# twir_parser

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: build-binary.yml  release-on-tag.yml
src/: cli.rs  crawler.rs  logger.rs  main.rs  utils.rs
src/model/: mod.rs  twir_issue.rs
src/web_crawler/: crawler.rs  mod.rs  twir_crawler.rs
