[package]
name = "twir_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
reqwest = "0.11.18"
scraper = "0.16.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-rustls = { version = "0.24.1", features = ["dangerous_configuration"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
